crates/sdk-derive/derive-core/src/snapshots/fluentbase_sdk_derive_core__router__tests__generate_router.snap
---
source: crates/sdk-derive/derive-core/src/router.rs
expression: formatted_code
---
impl TestContract {
    pub fn first_method(&mut self, value: u32) -> u32 {
        value * 2
    }
    pub fn second_method(&mut self, a: String, b: bool) -> (String, bool) {
        (a, b)
    }
}
pub type FirstMethodCallArgs = (u32,);
pub struct FirstMethodCall(FirstMethodCallArgs);
impl FirstMethodCall {
    pub const SELECTOR: [u8; 4] = [90u8, 193u8, 6u8, 45u8];
    pub const SIGNATURE: &'static str = "firstMethod(uint32)";
    pub fn new(args: FirstMethodCallArgs) -> Self {
        Self(args)
    }
    pub fn encode(&self) -> fluentbase_sdk::codec::bytes::Bytes {
        let mut buf = fluentbase_sdk::codec::bytes::BytesMut::new();
        fluentbase_sdk::codec::encoder::SolidityABI::encode(
                &(self.0.clone().0,),
                &mut buf,
                0,
            )
            .unwrap();
        let encoded_args = buf.freeze();
        let clean_args = if fluentbase_sdk::codec::encoder::SolidityABI::<
            FirstMethodCallArgs,
        >::is_dynamic() {
            encoded_args[32..].to_vec()
        } else {
            encoded_args.to_vec()
        };
        Self::SELECTOR.iter().copied().chain(clean_args).collect()
    }
    pub fn decode(
        buf: &impl fluentbase_sdk::codec::bytes::Buf,
    ) -> ::core::result::Result<Self, fluentbase_sdk::codec::CodecError> {
        use fluentbase_sdk::codec::bytes::BufMut;
        let dynamic_offset = if fluentbase_sdk::codec::encoder::SolidityABI::<
            FirstMethodCallArgs,
        >::is_dynamic() {
            ::fluentbase_sdk::U256::from(32).to_be_bytes::<32>().to_vec()
        } else {
            ::alloc::vec::Vec::new()
        };
        let mut combined_buf = fluentbase_sdk::codec::bytes::BytesMut::new();
        combined_buf.put_slice(&dynamic_offset);
        combined_buf.put_slice(buf.chunk());
        let args = fluentbase_sdk::codec::encoder::SolidityABI::<
            FirstMethodCallArgs,
        >::decode(&combined_buf.freeze(), 0)?;
        Ok(Self(args))
    }
}
impl ::core::ops::Deref for FirstMethodCall {
    type Target = FirstMethodCallArgs;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
pub type FirstMethodCallTarget = <FirstMethodCall as ::core::ops::Deref>::Target;
pub type FirstMethodReturnArgs = (u32,);
#[derive(Debug)]
pub struct FirstMethodReturn(FirstMethodReturnArgs);
impl FirstMethodReturn {
    pub fn new(args: FirstMethodReturnArgs) -> Self {
        Self(args)
    }
    pub fn encode(&self) -> fluentbase_sdk::codec::bytes::Bytes {
        let mut buf = fluentbase_sdk::codec::bytes::BytesMut::new();
        fluentbase_sdk::codec::encoder::SolidityABI::encode(
                &(self.0.clone().0,),
                &mut buf,
                0,
            )
            .unwrap();
        let encoded_args = buf.freeze();
        let clean_args = if fluentbase_sdk::codec::encoder::SolidityABI::<
            FirstMethodReturnArgs,
        >::is_dynamic() {
            encoded_args[32..].to_vec()
        } else {
            encoded_args.to_vec()
        };
        clean_args.into()
    }
    pub fn decode(
        buf: &impl fluentbase_sdk::codec::bytes::Buf,
    ) -> ::core::result::Result<Self, fluentbase_sdk::codec::CodecError> {
        use fluentbase_sdk::codec::bytes::BufMut;
        let dynamic_offset = if fluentbase_sdk::codec::encoder::SolidityABI::<
            FirstMethodReturnArgs,
        >::is_dynamic() {
            ::fluentbase_sdk::U256::from(32).to_be_bytes::<32>().to_vec()
        } else {
            ::alloc::vec::Vec::new()
        };
        let mut combined_buf = fluentbase_sdk::codec::bytes::BytesMut::new();
        combined_buf.put_slice(&dynamic_offset);
        combined_buf.put_slice(buf.chunk());
        let args = fluentbase_sdk::codec::encoder::SolidityABI::<
            FirstMethodReturnArgs,
        >::decode(&combined_buf.freeze(), 0)?;
        Ok(Self(args))
    }
}
impl ::core::ops::Deref for FirstMethodReturn {
    type Target = FirstMethodReturnArgs;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
pub type FirstMethodReturnTarget = <FirstMethodReturn as ::core::ops::Deref>::Target;
pub type SecondMethodCallArgs = (String, bool);
pub struct SecondMethodCall(SecondMethodCallArgs);
impl SecondMethodCall {
    pub const SELECTOR: [u8; 4] = [92u8, 23u8, 35u8, 57u8];
    pub const SIGNATURE: &'static str = "secondMethod(string,bool)";
    pub fn new(args: SecondMethodCallArgs) -> Self {
        Self(args)
    }
    pub fn encode(&self) -> fluentbase_sdk::codec::bytes::Bytes {
        let mut buf = fluentbase_sdk::codec::bytes::BytesMut::new();
        fluentbase_sdk::codec::encoder::SolidityABI::encode(
                &(self.0.clone().0, self.0.clone().1),
                &mut buf,
                0,
            )
            .unwrap();
        let encoded_args = buf.freeze();
        let clean_args = if fluentbase_sdk::codec::encoder::SolidityABI::<
            SecondMethodCallArgs,
        >::is_dynamic() {
            encoded_args[32..].to_vec()
        } else {
            encoded_args.to_vec()
        };
        Self::SELECTOR.iter().copied().chain(clean_args).collect()
    }
    pub fn decode(
        buf: &impl fluentbase_sdk::codec::bytes::Buf,
    ) -> ::core::result::Result<Self, fluentbase_sdk::codec::CodecError> {
        use fluentbase_sdk::codec::bytes::BufMut;
        let dynamic_offset = if fluentbase_sdk::codec::encoder::SolidityABI::<
            SecondMethodCallArgs,
        >::is_dynamic() {
            ::fluentbase_sdk::U256::from(32).to_be_bytes::<32>().to_vec()
        } else {
            ::alloc::vec::Vec::new()
        };
        let mut combined_buf = fluentbase_sdk::codec::bytes::BytesMut::new();
        combined_buf.put_slice(&dynamic_offset);
        combined_buf.put_slice(buf.chunk());
        let args = fluentbase_sdk::codec::encoder::SolidityABI::<
            SecondMethodCallArgs,
        >::decode(&combined_buf.freeze(), 0)?;
        Ok(Self(args))
    }
}
impl ::core::ops::Deref for SecondMethodCall {
    type Target = SecondMethodCallArgs;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
pub type SecondMethodCallTarget = <SecondMethodCall as ::core::ops::Deref>::Target;
pub type SecondMethodReturnArgs = (String, bool);
#[derive(Debug)]
pub struct SecondMethodReturn(SecondMethodReturnArgs);
impl SecondMethodReturn {
    pub fn new(args: SecondMethodReturnArgs) -> Self {
        Self(args)
    }
    pub fn encode(&self) -> fluentbase_sdk::codec::bytes::Bytes {
        let mut buf = fluentbase_sdk::codec::bytes::BytesMut::new();
        fluentbase_sdk::codec::encoder::SolidityABI::encode(
                &(self.0.clone().0, self.0.clone().1),
                &mut buf,
                0,
            )
            .unwrap();
        let encoded_args = buf.freeze();
        let clean_args = if fluentbase_sdk::codec::encoder::SolidityABI::<
            SecondMethodReturnArgs,
        >::is_dynamic() {
            encoded_args[32..].to_vec()
        } else {
            encoded_args.to_vec()
        };
        clean_args.into()
    }
    pub fn decode(
        buf: &impl fluentbase_sdk::codec::bytes::Buf,
    ) -> ::core::result::Result<Self, fluentbase_sdk::codec::CodecError> {
        use fluentbase_sdk::codec::bytes::BufMut;
        let dynamic_offset = if fluentbase_sdk::codec::encoder::SolidityABI::<
            SecondMethodReturnArgs,
        >::is_dynamic() {
            ::fluentbase_sdk::U256::from(32).to_be_bytes::<32>().to_vec()
        } else {
            ::alloc::vec::Vec::new()
        };
        let mut combined_buf = fluentbase_sdk::codec::bytes::BytesMut::new();
        combined_buf.put_slice(&dynamic_offset);
        combined_buf.put_slice(buf.chunk());
        let args = fluentbase_sdk::codec::encoder::SolidityABI::<
            SecondMethodReturnArgs,
        >::decode(&combined_buf.freeze(), 0)?;
        Ok(Self(args))
    }
}
impl ::core::ops::Deref for SecondMethodReturn {
    type Target = SecondMethodReturnArgs;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
pub type SecondMethodReturnTarget = <SecondMethodReturn as ::core::ops::Deref>::Target;
impl TestContract {
    pub fn main(&mut self) {
        let input_length = self.sdk.input_size();
        if input_length < 4 {
            panic!("insufficient input length for method selector");
        }
        let mut call_data = fluentbase_sdk::alloc_slice(input_length as usize);
        self.sdk.read(&mut call_data, 0);
        let (selector, params) = call_data.split_at(4);
        match [selector[0], selector[1], selector[2], selector[3]] {
            FirstMethodCall::SELECTOR => {
                let (value) = match FirstMethodCall::decode(&params) {
                    Ok(decoded) => (decoded.0.0),
                    Err(err) => panic!("Failed to decode input parameters: {:?}", err),
                };
                let output = self.first_method(value);
                let encoded_output = FirstMethodReturn::new((output,)).encode();
                self.sdk.write(&encoded_output);
            }
            SecondMethodCall::SELECTOR => {
                let (a, b) = match SecondMethodCall::decode(&params) {
                    Ok(decoded) => (decoded.0.0, decoded.0.1),
                    Err(err) => panic!("Failed to decode input parameters: {:?}", err),
                };
                let output = self.second_method(a, b);
                let encoded_output = SecondMethodReturn::new(output).encode();
                self.sdk.write(&encoded_output);
            }
            _ => panic!("unsupported method selector"),
        }
    }
}
